--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,6 @@ jobs:
           cd ${{ secrets.FRONTEND_PATH }}
           git pull origin main
           npm install --legacy-peer-deps
-          npm run build
+          npm install eslint@latest eslint-config-next@latest --save-dev
+          NODE_OPTIONS=--max_old_space_size=4096 NEXT_DISABLE_ESLINT=1 npm run build
           # optional: restart Nginx/Apache if needed
