--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,13 @@ jobs:
     - name: Install Dependencies
       run: npm install --legacy-peer-deps
 
-    - name: Verify Installation
+    - name: Verify Next.js Version
       run: npx next --version
 
     - name: Build the Application
-      run: npm run build
+      run: |
+        echo "Disabling ESLint and increasing memory limit for build"
+        NODE_OPTIONS=--max_old_space_size=4096 NEXT_DISABLE_ESLINT=1 npm run build
 
     - name: Deploy to EC2
       uses: appleboy/ssh-action@master
@@ -32,6 +34,5 @@ jobs:
           cd ${{ secrets.FRONTEND_PATH }}
           git pull origin main
           npm install --legacy-peer-deps
-          npm install eslint@latest eslint-config-next@latest --save-dev
           NODE_OPTIONS=--max_old_space_size=4096 NEXT_DISABLE_ESLINT=1 npm run build
-          # optional: restart Nginx/Apache if needed
+          # Optional: Restart Nginx or PM2 here if needed
