--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,5 @@ jobs:
           cd ${{ secrets.FRONTEND_PATH }}
           git pull origin main
           npm install --legacy-peer-deps
-          NODE_OPTIONS=--max_old_space_size=4096 NEXT_DISABLE_ESLINT=1 npm run build
+          npm run build
           # Optional: Restart Nginx or PM2 here if needed
