--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,23 +6,35 @@ on:
       - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
+    - name: Checkout Repo
       uses: actions/checkout@v3
 
     - name: Install Dependencies
       run: npm install --legacy-peer-deps
 
-    - name: Verify Installation
-      run: npx next --version
-
-    - name: Build the Application
+    - name: Build Next.js App
       run: npm run build
 
-    - name: Deploy to EC2
+    - name: Archive Production Files
+      run: |
+        mkdir prod
+        cp -r .next public package.json next.config.js prod/
+        # Add any other files needed to run app (e.g. .env.production)
+    
+    - name: Copy Files to EC2
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USER }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        source: "prod/*"
+        target: "${{ secrets.FRONTEND_PATH }}"
+
+    - name: Run Deploy Script on EC2
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SSH_HOST }}
@@ -30,8 +42,5 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
           cd ${{ secrets.FRONTEND_PATH }}
-          git reset --hard HEAD      # Discard any local changes
-          git clean -fd              # Remove untracked files/directories
-          git pull origin main       # Now pull latest code safely
           npm install --legacy-peer-deps
-          npm run build
+          pm2 restart my-app || npm run start
